/*
 * $Id: ChangeLog,v 1.3910 2005/03/06 00:52:59 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2005-03-06 10:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/errorsys.prg
    ! HB_BUILDDATE() to stand free for all platform

2005-03-06 07:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/hvm.c
    + HB_FUNC( HB_VMMODE ), detect optimization on run time

  * tests/version.prg
  * utils/hbtest/hbtest.prg
    + info on VM optimization

  * source/common/hbver.c
    + hb_builddate(), info of harbour build date
    ! correct version info of __BORLANDC__

  * source/vm/cmdarg.c
    + info on VM optimization and MT compilation

  * source/rtl/errorsys.prg
    + print more info on error.log

2005-03-04 21:46 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * utils/xbscript/xbs_harb.ch
  * utils/xbscript/xbscript.prg
    * Added support for script procedure in ::EvalExprfession() and PP_Eval()

2005-03-04 14:56 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * source/rtl/win32ole.prg
    ! Optimized cClassNAme in C code to use static.
    * Changed order of Invoke, to test DISPATACH_METHOD, *before* trying DISPATCH_PROPERTYGET.

2005-03-05 05:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/hvm.c
    + HB_FUNC( HB_MULTITHREAD ), detect MT on run time

  * tests/version.prg
  * utils/hbtest/hbtest.prg
    + info if MT is enabled

2005-03-04 11:22 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * hrbdll.bc
    + added -Gi to Ilink when linking harbour.dll so it generates import lib,
      which is needed in subsequent targets.
  * dll_b32.bat
    ! Fixed to use copy of harbour.lib instead of implib.exe

2005-03-04 18:15 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbinit.h
    * cleaned and added #error for redundant macro settings to force